chore: Reformat all java source with google-java-code